package com.omayma.event_ticketing.model1;

public class Event {
}
