package com.omayma.event_ticketing.model;

public enum StatutReservation {
    CONFIRMEE,
    ANNULEE,
}
