package com.omayma.event_ticketing.model;

public enum StatutTicket {
    VALIDE,
    UTILISE
}
